# TurtleBot3-semantic-navigation

./: .gitignore  LICENSE  README.md  build.sh  build_tb3_frontier.sh  enter_tb3_dev.sh
docker/: Dockerfile  Dockerfile.grounding  compose.yaml  setup_ws.sh
grounding/: README.md  boxparse.py  requirements.txt  server.py
grounding/backends/: __init__.py  locate_anything.py  mock.py
grounding/eval/: .gitignore  README.md  __init__.py  capture_frames.py  manifest_schema.md  metrics.py  run_eval.py  viewpoints.example.json
grounding/eval/captures/: .gitignore
grounding/eval/manifests/: warehouse_aws.json
grounding/tests/: test_boxparse.py  test_eval_metrics.py  test_eval_runner.py  test_mock_backend.py
src/tb3_coordinator/: package.xml  setup.cfg  setup.py
src/tb3_coordinator/config/: coordinator.yaml
src/tb3_coordinator/launch/: coordinator.launch.py  full_semantic_nav.launch.py
src/tb3_coordinator/rviz/: semantic_nav.rviz
src/tb3_coordinator/tb3_coordinator/: coordinator_node.py  semantic_map_memory_node.py  semantic_memory_marker_node.py  semantic_runtime_debug_node.py
src/tb3_detector/: README.md  package.xml  setup.py
src/tb3_detector/config/: detector.yaml
src/tb3_detector/launch/: detector.launch.py
src/tb3_detector/models/: .gitignore  README.md
src/tb3_detector/scripts/: detector_node
src/tb3_detector/tb3_detector/: detector_core.py  detector_node.py
src/tb3_frontier_exploration/: CMakeLists.txt  README.md  package.xml
src/tb3_frontier_exploration/config/: params.yaml  semantic_goals.yaml  semantic_targets.yaml
src/tb3_frontier_exploration/docs/: COSTMAP_FILTER_AND_DEBUG.md  FRONTIER_DETECTION_DEBUG_LOGS.md  FRONTIER_DETECTION_NODE_DESIGN.md  GOAL_ASSIGNMENT_NODE_DESIGN.md  GOAL_ASSIGNMENT_STATE_AND_DEBUG.md  GOAL_ASSIGNMENT_TESTING.md  TEST_FRONTIER_DETECTION.md
src/tb3_frontier_exploration/env-hooks/: tb3_frontier_exploration.dsv.in
src/tb3_frontier_exploration/launch/: detector_test_sim.launch.py  exploration.launch.py  fake_semantic_navigation.launch.py  frontier_detection.launch.py  goal_assignment.launch.py  turtlebot3_world.launch.py  warehouse_semantic_sim.launch.py
src/tb3_frontier_exploration/models/: README.md
src/tb3_frontier_exploration/models/box_blue/: model.config  model.sdf
src/tb3_frontier_exploration/models/box_red/: model.config  model.sdf
src/tb3_frontier_exploration/models/box_yellow/: model.config  model.sdf
src/tb3_frontier_exploration/models/chair_blue/: model.config  model.sdf
src/tb3_frontier_exploration/models/chair_red/: model.config  model.sdf
src/tb3_frontier_exploration/models/sofa_orange/: model.config  model.sdf
src/tb3_frontier_exploration/scripts/: command_parser.py  fake_semantic_navigation_node.py  map_gating.py  startup_map_warmup_node.py
src/tb3_frontier_exploration/src/: frontier_detection_node.cpp  goal_assignment_node.cpp
src/tb3_frontier_exploration/worlds/: README.md  detector_test.world  warehouse_aws_semantic.world  warehouse_models_person.world  warehouse_semantic.world  warehouse_semantic_models.world
src/tb3_grounding/: README.md  package.xml  setup.cfg  setup.py
src/tb3_grounding/config/: grounding.yaml
src/tb3_grounding/launch/: evidence_store.launch.py
src/tb3_grounding/tb3_grounding/: evidence_core.py  evidence_store_node.py  grounding_client.py  resolver_core.py
src/tb3_grounding/test/: test_evidence_core.py  test_resolver_core.py
src/tb3_localizer/: README.md  package.xml  setup.cfg  setup.py
src/tb3_localizer/config/: localizer.yaml
src/tb3_localizer/launch/: localizer.launch.py
src/tb3_localizer/tb3_localizer/: localizer_core.py  localizer_node.py
src/tb3_memory/: README.md  package.xml  setup.cfg  setup.py
src/tb3_memory/config/: semantic_memory.yaml
src/tb3_memory/launch/: semantic_memory.launch.py
src/tb3_memory/tb3_memory/: memory_core.py  semantic_memory_node.py
src/tb3_nav_adapter/: README.md  package.xml  setup.cfg  setup.py
src/tb3_nav_adapter/config/: nav_goal_adapter.yaml
src/tb3_nav_adapter/launch/: nav_goal_adapter.launch.py
src/tb3_nav_adapter/tb3_nav_adapter/: goal_adapter_core.py  nav_goal_adapter_node.py
src/tb3_query/: CMakeLists.txt  README.md  package.xml
src/tb3_query/config/: semantic_query.yaml
src/tb3_query/launch/: semantic_query.launch.py
src/tb3_query/msg/: SemanticQueryResult.msg
src/tb3_query/tb3_query/: query_core.py  semantic_query_node.py
src/tb3_query/test/: smoke_test_query.py  test_query_core.py
